--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
+	//이렇게 추가나 수정시에는 반드시 gradle아이콘 오른클릭 누르고 refresh항목이 아닌 gradle항목에서 refresh gradle project를 눌러야함
 }
 
 tasks.named('test') {
